Added nav bar to about and contact, fixed link highlighting

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="box">
                 <img src="img/eye-oranges.jpg" alt="Woman with oranges on her eyes, very cool!">
-                <h3>Look cool</h3>
+                <h3>Cool eyes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolorum labore, velit est fugiat illo consequuntur commodi sequi ipsum nemo, modi perferendis amet recusandae dignissimos tempore aperiam quia, culpa blanditiis?</p>
             </div>
 
