--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="store.html">Store</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="shoppingcart.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg></a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -40,6 +43,10 @@
             </form>
         </div>
     </section>
+
+    <svg>
+
+    </svg> 
 
     <section id="boxes">
         <div class="container"><h1>Benefits of Oranges</h1></div>
