--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oranges | About</title>
+    <title>Oranges | Shopping Cart</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -13,13 +13,21 @@
             <div id="branding">
                 <h1>Oranges</h1>
             </div>
-
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="store.html">Store</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="shoppingcart.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg></a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <div class="container">
+
+    </div>
+</body>
+</html>
